fix some tabbing issue in IE forms. align the sr dropdown properly in IE

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -2036,6 +2036,7 @@ ul#image-preview-list .description pre {
     border: 1px solid gray;
     background: white;
     display: none;
+    left: 0;
 }
 
 #sr-drop-down  table { 
